syntax = "proto3";

package protocol;

option go_package = "github.com/teranos/QNTX/plugin/grpc/protocol";

// Message type discriminator for server-to-client messages
enum MessageType {
  MESSAGE_TYPE_UNSPECIFIED = 0;
  MESSAGE_TYPE_DAEMON_STATUS = 1;
  MESSAGE_TYPE_JOB_UPDATE = 2;
  MESSAGE_TYPE_STORAGE_WARNING = 3;
}

// DaemonStatusMessage represents daemon status update sent to clients
message DaemonStatusMessage {
  MessageType type = 1;              // Message type discriminator
  bool running = 2;                  // Is daemon running
  int32 active_jobs = 3;             // Number of active jobs
  int32 queued_jobs = 4;             // Number of queued jobs
  int32 load_percentage = 5;         // CPU/processing load (0-100)
  double budget_daily = 6;           // Daily budget spent
  double budget_weekly = 7;          // Weekly budget spent
  double budget_monthly = 8;         // Monthly budget spent
  double budget_daily_limit = 9;     // Daily budget limit (config)
  double budget_weekly_limit = 10;   // Weekly budget limit (config)
  double budget_monthly_limit = 11;  // Monthly budget limit (config)
  string server_state = 12;          // Server state - see docs/server-states.md for state machine
  int64 timestamp = 13;              // Unix timestamp
}

// JobUpdateMessage represents async job update sent to clients
message JobUpdateMessage {
  MessageType type = 1;                // Message type discriminator
  // TODO: Add Job field once Job type is migrated to proto
  // Job job = 2;                     // Full job details
  map<string, string> metadata = 3;   // Additional metadata
}

// StorageWarningMessage represents bounded storage warning
message StorageWarningMessage {
  MessageType type = 1;           // Message type discriminator
  string actor = 2;                // Actor approaching limit
  string context = 3;              // Context approaching limit
  int32 current = 4;               // Current attestation count
  int32 limit = 5;                 // Configured limit
  int32 fill_percentage = 6;       // Percentage full (0-100)
  string time_until_full = 7;      // Human-readable time until hitting limit
  int64 timestamp = 8;             // Unix timestamp
}